--- a/package.json
+++ b/package.json
@@ -16,8 +16,9 @@
     "@react-navigation/stack": "^6.4.1",
     "@rneui/base": "^4.0.0-rc.7",
     "@rneui/themed": "^4.0.0-rc.8",
+    "expo-status-bar": "^1.12.1",
     "react": "18.3.1",
-    "react-native": "0.76.1",
+    "react-native": "^0.76.1",
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "^2.20.2",
     "react-native-safe-area-context": "^4.14.0",
