--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "^2.20.2",
     "react-native-safe-area-context": "^4.14.0",
-    "react-native-screens": "^3.35.0"
+    "react-native-screens": "^3.35.0",
+    "react-native-svg": "^15.8.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
@@ -45,6 +46,7 @@
     "globals": "^15.12.0",
     "jest": "^29.6.3",
     "prettier": "^2.8.8",
+    "react-native-svg-transformer": "^1.5.0",
     "react-test-renderer": "18.3.1",
     "typescript": "^5.0.4",
     "typescript-eslint": "^8.13.0"
